--- a/views/shared/base.dust
+++ b/views/shared/base.dust
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{+pageTitle}Real Time Map{/pageTitle}</title>
+    <link type="text/css" rel="stylesheet" href="/css/main.css">
     {+pageStyles/}
     {+pageScripts/}
   </head>
