--- a/views/shared/base.dust
+++ b/views/shared/base.dust
@@ -3,6 +3,7 @@
   <head>
     <title>{+pageTitle}Real Time Map{/pageTitle}</title>
     <link type="text/css" rel="stylesheet" href="/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     {+pageStyles/}
     {+pageScripts/}
   </head>
