--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,9 @@ html, body {
 
 .fullscreen {
   display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -26,7 +29,14 @@ html, body {
   display: block;
   position: relative;
   z-index: 100;
-  width: 100%;
   height: 50px;
-  margin-bottom: -50px;  /* Makes the topbar be in the front of main map */
+  padding: 0 10px;
+}
+
+.topbar h1 {
+  margin: 0;
+}
+
+.logo {
+  padding: 5px;
 }
