--- a/public/theme/default/css/style.css
+++ b/public/theme/default/css/style.css
@@ -3,6 +3,11 @@
  */
 
 .topbar {
-    background-color: rgb(20, 200, 40);  /* Fallback */
-    background-color: rgba(20, 200, 40, 0.5);
+  background-color: rgb(20, 200, 40);  /* Fallback */
+  background-color: rgba(20, 200, 40, 0.7);
+  color: #fff;
+}
+
+.logo {
+  font-style: italic;
 }
